--- a/core/templates/accounts/admin_dashboard.html
+++ b/core/templates/accounts/admin_dashboard.html
@@ -668,6 +668,10 @@
               <input type="text" class="form-control" id="inhouse_last_name" name="last_name" required>
             </div>
             <div class="form-group">
+              <label for="inhouse_username">Username</label>
+              <input type="text" class="form-control" id="inhouse_username" name="username" required>
+            </div>
+            <div class="form-group">
               <label for="inhouse_email">Email</label>
               <input type="email" class="form-control" id="inhouse_email" name="email" required>
             </div>
@@ -721,6 +725,10 @@
             <div class="form-group">
               <label for="customer_last_name">Last Name</label>
               <input type="text" class="form-control" id="customer_last_name" name="last_name" required>
+            </div>
+            <div class="form-group">
+              <label for="customer_username">Username</label>
+              <input type="text" class="form-control" id="customer_username" name="username" required>
             </div>
             <div class="form-group">
               <label for="customer_email">Email</label>
@@ -1177,6 +1185,7 @@ document.addEventListener('DOMContentLoaded', function() {
       document.getElementById('inhouse_user_id').value = this.dataset.id;
       document.getElementById('inhouse_first_name').value = this.dataset.first_name;
       document.getElementById('inhouse_last_name').value = this.dataset.last_name;
+      document.getElementById('inhouse_username').value = this.dataset.username;
       document.getElementById('inhouse_email').value = this.dataset.email;
       document.getElementById('inhouse_phone').value = this.dataset.phone;
       document.getElementById('inhouse_id_number').value = this.dataset.id_number;
@@ -1192,6 +1201,7 @@ document.addEventListener('DOMContentLoaded', function() {
       document.getElementById('customer_user_id').value = this.dataset.id;
       document.getElementById('customer_first_name').value = this.dataset.first_name;
       document.getElementById('customer_last_name').value = this.dataset.last_name;
+      document.getElementById('customer_username').value = this.dataset.username;
       document.getElementById('customer_email').value = this.dataset.email;
       document.getElementById('customer_phone').value = this.dataset.phone;
       document.getElementById('customer_id_number').value = this.dataset.id_number;
